hphp/hack/test/typecheck/expression_trees/php_lambda.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  Code`function () {
    return 1;
  }`;
}
